<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>alpine</groupId>
    <artifactId>plugin-example</artifactId>
    <version>0.9.9.19</version>

    <repositories>
      <repository>
	<id>central</id>
	<name>Maven Repository</name>
	<url>https://repo1.maven.org/maven2</url>
	<releases>
          <enabled>true</enabled>
	</releases>
	<snapshots>
          <enabled>false</enabled>
	</snapshots>
      </repository>
      <!-- Incase there is a sync delay -->
      <repository>
	<id>sonatype-releases</id>
	<name>Sonatype Repository</name>
	<url>https://oss.sonatype.org/content/repositories/releases</url>
	<releases>
	  <enabled>true</enabled>
	</releases>
	<snapshots>
          <enabled>false</enabled>
	</snapshots>
      </repository>
    </repositories>
    <dependencies>

        <!-- Alpine dependency -->

        <dependency>
            <groupId>com.alpinenow</groupId>
            <artifactId>plugin-core</artifactId>
            <version>0.9.9.19</version>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>com.alpinenow</groupId>
            <artifactId>plugin-test</artifactId>
            <version>0.9.9.19</version>
            <type>test-jar</type>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>com.alpinenow</groupId>
            <artifactId>plugin-test</artifactId>
            <version>0.9.9.19</version>
            <scope>test</scope>
        </dependency>

	
        <dependency>
            <groupId>com.alpinenow</groupId>
            <artifactId>plugin-spark</artifactId>
            <version>0.9.9.19</version>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>com.alpinenow</groupId>
            <artifactId>plugin-model</artifactId>
            <version>0.9.9.19</version>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>com.alpinenow</groupId>
            <artifactId>alpine-model-api</artifactId>
            <version>0.9.9.19</version>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>com.alpinenow</groupId>
            <artifactId>alpine-model-pack</artifactId>
            <version>0.9.9.19</version>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>com.alpinenow</groupId>
            <artifactId>plugin-io-impl</artifactId>
            <version>0.9.9.19</version>
            <scope>provided</scope>
        </dependency>

        <!-- Spark dependency -->

        <dependency>
            <groupId>org.apache.spark</groupId>
            <artifactId>spark-core_2.10</artifactId>
            <version>1.3.1</version>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>org.apache.spark</groupId>
            <artifactId>spark-mllib_2.10</artifactId>
            <version>1.3.1</version>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>org.apache.spark</groupId>
            <artifactId>spark-catalyst_2.10</artifactId>
            <version>1.3.1</version>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>org.apache.spark</groupId>
            <artifactId>spark-sql_2.10</artifactId>
            <version>1.3.1</version>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>org.apache.spark</groupId>
            <artifactId>spark-hive_2.10</artifactId>
            <version>1.3.1</version>
            <scope>provided</scope>
        </dependency>

    </dependencies>

    <build>
        <plugins>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>2.3.2</version>
                <configuration>
                    <source>1.6</source>
                    <target>1.6</target>
                </configuration>
            </plugin>

	    <!-- Useful for testing -->
	    <plugin>
              <artifactId>maven-surefire-plugin</artifactId>
              <configuration>
                <argLine>-Xmx2048m -XX:MaxPermSize=1024m</argLine>
              </configuration>
            </plugin>

            <plugin>
                <groupId>org.scala-tools</groupId>
                <artifactId>maven-scala-plugin</artifactId>
                <version>2.15.2</version>
                <executions>
                    <execution>
                        <goals>
                            <goal>compile</goal>
                            <goal>testCompile</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>2.4</version>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                        <configuration>
                            <filters>
                                <filter>
                                    <artifact>*:*</artifact>
                                    <excludes>
                                        <exclude>META-INF/*.SF</exclude>
                                        <exclude>META-INF/*.DSA</exclude>
                                        <exclude>META-INF/*.RSA</exclude>
                                    </excludes>
                                </filter>
                            </filters>
                        </configuration>
                    </execution>
                </executions>
            </plugin>

        </plugins>
    </build>

</project>

